Added grunt-buster to package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.3.1",
     "buster": "~0.6.12",
-    "superagent": "~0.14.1"
+    "superagent": "~0.14.1",
+    "grunt-buster": "~0.1.2"
   },
   "keywords": [],
   "scripts": {
