--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "lib/ellipsis.js",
   "author": {
     "name": "Wilson Page",
-    "email": "wilsonpage@me.com"
+    "email": "wilsonpage@me.com",
+    "organization": "The Finanacial Times Limited"
   },
   "licenses": [
     {
