--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": {
     "name": "Wilson Page",
     "email": "wilsonpage@me.com",
+    "github": "wilsonpage",
     "organization": "The Finanacial Times Limited"
   },
   "licenses": [
