--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ellipsis",
-  "title": "Ellipsis",
+  "name": "ftellipsis",
+  "title": "FTEllipsis",
   "description": "Multi-line ellipsis made possible",
   "version": "0.1.10",
-  "homepage": "https://github.com/wilsonpage/ellipsis",
-  "main": "lib/ellipsis.js",
+  "homepage": "https://github.com/ftlabs/ftellipsis",
+  "main": "lib/index.js",
   "author": {
     "name": "Wilson Page",
     "email": "wilsonpage@me.com",
@@ -14,7 +14,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/wilsonpage/ellipsis/blob/master/LICENSE-MIT"
+      "url": "https://github.com/ftlabs/ftellipsis/blob/master/LICENSE-MIT"
     }
   ],
   "dependencies": {},
@@ -27,7 +27,11 @@
     "superagent": "~0.14.1",
     "grunt-buster": "~0.1.2"
   },
-  "keywords": [],
+  "keywords": [
+    "ellipsis",
+    "css",
+    "layout"
+  ],
   "scripts": {
     "test": "grunt buster"
   }
