Fix superagent breaking buster

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.3.1",
     "buster": "~0.6.12",
-    "superagent": "~0.14.1",
+    "superagent": "0.14.4",
     "grunt-buster": "~0.1.2",
     "grunt-cli": "~0.1.8"
   },
