--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "grunt": "*",
+    "grunt": "~0.4.5",
     "grunt-readme": "git://github.com/wilsonpage/grunt-readme.git",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.1",
-    "buster": "~0.6.12",
+    "buster": "~0.7",
+    "buster-assertions": "~0.10.4",
     "superagent": "0.14.4",
-    "grunt-buster": "~0.1.2",
-    "grunt-cli": "~0.1.8"
+    "grunt-buster": "~0.3.1",
+    "grunt-cli": "~0.1.8",
+    "phantomjs": "^2"
   },
   "keywords": [
     "ellipsis",
